# Minecraft2D

./: CMakeLists.txt  README.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
resources/: spriteFragShader.frag  spriteVrtxShader.vert  vrtxShader.vert  worldFragShader.frag  worldVrtxShader.vert
src/: block.hpp  chunk.cpp  chunk.hpp  entity.cpp  entity.hpp  game.cpp  game.hpp  log.hpp  logging.hpp  main.cpp  utility.hpp
src/graphics/: camera.cpp  camera.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  sprite.cpp  sprite.hpp  tileset.cpp  tileset.hpp  worldRenderer.cpp  worldRenderer.hpp
src/scene/: gameScene.cpp  gameScene.hpp  menuScene.cpp  menuScene.hpp  scene.hpp
src/world/: biome.cpp  biome.hpp  biomeTypes.hpp  block.cpp  block.hpp  blockTypes.hpp  gameWorld.cpp  gameWorld.hpp  structure.cpp  structure.hpp  worldEncyclopedia.cpp  worldEncyclopedia.hpp  worldGenerator.cpp  worldGenerator.hpp  worldLoader.cpp  worldLoader.hpp
